@@ -9,6 +9,9 @@ depends:
     res
     sale
     sale_price_list
+extras_depend:
+    sale_point
 xml:
     sale.xml
+    sale_reporting.xml
     message.xml
