@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//field[@name='number']" position="before">
+        <field name="promotion" expand="1"/>
+    </xpath>
+    <xpath expr="//field[@name='revenue_trend']" position="replace"></xpath>
+</data>
