@@ -1,3 +1,4 @@
+* Add sale reporting per promotion
 * Add relate from promotions to sales
 
 Version 7.2.0 - 2024-04-29
